<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hk.ust.mingzheliu.develop.Cal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/cal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_below="@id/cal_toolbar"
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/textSize" />

    <TextView
        android:layout_below="@id/num1"
        android:id="@+id/function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/textSize"
        android:visibility="gone" />

    <TextView
        android:layout_below="@id/function"
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/textSize"
        android:visibility="gone" />

    <TextView
        android:layout_below="@id/num2"
        android:id="@+id/es"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/equal"
        android:textSize="@dimen/textSize"
        android:visibility="gone"/>

    <TextView
        android:layout_below="@id/es"
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/textSize"
        android:visibility="gone" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:columnCount="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="one"
            android:text="@string/num1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="two"
            android:text="@string/num2"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="three"
            android:text="@string/num3"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="plus"
            android:text="@string/plus"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="four"
            android:text="@string/num4"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="five"
            android:text="@string/num5"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="six"
            android:text="@string/num6"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="minus"
            android:text="@string/subtract"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="seven"
            android:text="@string/num7"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="eight"
            android:text="@string/num8"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nine"
            android:text="@string/num9"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mul"
            android:text="@string/multiply"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clear"
            android:text="@string/clear"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zero"
            android:text="@string/num0"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="equal"
            android:text="@string/equal"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dev"
            android:text="@string/divide"
            style="?android:attr/buttonBarButtonStyle"/>

    </GridLayout>

</RelativeLayout>
