<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hk.ust.mingzheliu.develop.Set">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AM"
        android:onClick="ama"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SS"
        android:onClick="mcs"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/am"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Air"
        android:onClick="am"
        style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>
